file-browser/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: file-browser
  name: file-browser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-browser
  template:
    metadata:
      labels:
        app: file-browser
    spec:
      containers:
      - image: tarbadev/filebrowser:2.6.5
        name: file-browser-test-server
        command: ["/filebrowser"]
        args: ["--noauth"]
        ports:
          - containerPort: 80
            protocol: TCP
        volumeMounts:
          - name: media-volume
            mountPath: /srv
          - name: file-browser-volume
            mountPath: /config
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-claim
        - name: file-browser-volume
          persistentVolumeClaim:
            claimName: file-browser-claim
