file-browser/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: file-browser-service
  name: file-browser-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: file-browser
  type: ClusterIP
